--- a/index.html
+++ b/index.html
@@ -8,143 +8,114 @@
 	<link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="adaptive.css">
 </head>
-<<body>
+<body>
 	<header class="header">
-		<img src="img/logo.svg" alt="logo" class="logo"/>
-		<nav class="menu">
-            <a class="menu__item menu__item_active" href="#">Model S</a>
-            <a class="menu__item" href="#">Model X</a>
-            <a class="menu__item" href="#">Model 3</a>
-            <a class="menu__item" href="#">Roadster</a>
-            <a class="menu__item" href="#">Energy</a>
-        </nav>
-
-		<nav class="side-menu">
-								<a class="side-menu__item" href="#">Магазин</a>
-								<a class="side-menu__item" href="#">Войти</a>
-								<div class="burger-menu"></div>
-		</nav>
+	    <img src="img/logo.svg" alt="logo" class="logo"/>
+			<nav class="menu">
+		    	<a class="menu__item menu__item_active" href="#">Model S</a>
+		      <a class="menu__item" href="#">Model X</a>
+		      <a class="menu__item" href="#">Model 3</a>
+		      <a class="menu__item" href="#">Roadster</a>
+		      <a class="menu__item" href="#">Energy</a>
+    	</nav>
+			<nav class="side-menu">
+					<a class="side-menu__item" href="#">Магазин</a>
+					<a class="side-menu__item" href="#">Войти</a>
+					<div class="burger-menu"></div>
+		 </nav>
 	</header>
-
-		<section class="main">
+	<section class="main">
 			<h1 class="main_title">Model S</h1>
 			<p class="main_subtitle">Добро пожаловать в будущее!</p>
 			<picture class="main_background">
-				<img class="main_img" alt="Tesla" src="img/car.png">
+					<img class="main_img" alt="Tesla" src="img/car.png">
 			</picture>
-
-
 			<div class="characteristics">
-
-				<div class="characteristic__speed">
-					<img class="characteristic__speed_img"alt="Speed" src="img/speed.svg"/>
-					<h4 class="characteristic__number">2,7<span class="characteristic__measure">сек</span></h4>
-					<div class="characteristic__description">0-100 км/час</div>
-
-				</div>
-
-				<div class="characteristic__range">
-					<img class="characteristic__range_img"alt="Range" src="img/road icon.svg"/>
-					<h4 class="characteristic__number">632<span class="characteristic__measure">км</span></h4>
-					<div class="characteristic__description">запас хода</div>
-				</div>
-
-				<div class="characteristic__test">
-					<img class="characteristic_steering-wheel"alt="test-drive" src="img/steering-wheel.svg"/>
-					<span class="characteristic_test-drive">ТЕСТ ДРАЙВ</span>
-
-        </div>
-
-				<div class="characteristic__button-order">
-            <button class="button_order">ЗАКАЗАТЬ</button>
-        </div>
-
-			</div>
-		</section>
-
-		<div class="arrow"></div><
-
-		<main class="section">
-
-			<h1 class="section_title">Model S</h1>
-
+					<div class="characteristic-speed">
+							<img class="characteristic-speed__img"alt="Speed" src="img/speed.svg"/>
+							<div class="haracteristic-speed__caption">
+									<div class="characteristic-speed__number">2,7<span class="characteristic-speed__text">сек</span></div>
+							</div>
+							<div class="characteristic-speed__description">0-100 км/час</div>
+					</div>
+					<div class="characteristic-range">
+							<img class="characteristic-range__img"alt="Range" src="img/road icon.svg"/>
+							<div class="characteristic-range__caption">
+									<div class="characteristic-range__number">632<span class="characteristic-range__text">км</span></div>
+							</div>
+							<div class="characteristic-range__description">запас хода</div>
+					</div>
+					<div class="buttons">
+							<button class="button-test">
+									<img class="button-test__img"alt="test-drive" src="img/steering-wheel.svg"/>
+									<span class="button-test__name">ТЕСТ ДРАЙВ</span>
+							</button>
+							<button class="button_order">ЗАКАЗАТЬ</button>
+        	</div>
+		 </div>
+	</section>
+	<div class="arrow"></div>
+	<main class="section">
+	    <h1 class="section__title">Model S</h1>
 			<div class="section__img"></div>
-
-			<aside class="side__menu">
-					<article class="side__menu_article">
-					<h3 class="side__menu_title">Будущее вождения</h3>
-					Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
-				</article>
-
-					<ul class="side__menu_details">
-				 <li class="characteristic__measure details">
-					 <img class="display__icon" src="img/screen.svg" alt="Иконка дисплея">
-					 <span class="characteristic__number">17</span>
-					 дюймов
-					 <div class="additional characteristic__measure">Большой дисплей</div>
-				 </li>
-				 <img class="wifi__icon" src="img/wifi.svg" alt="Иконка wf">
-				 <li class="characteristic__title details">
-					 Беспроводное обновление ПО
-					 <div class="additional characteristic__measure">Повышенная функциональность</div>
-				 </li>
-				 <li class="characteristic__measure details">
-					 <img class="bag__icon" src="img/bag.svg" alt="Иконка бака">
-					 <span class="characteristic__number">894</span>
-					 литра
-					 <div class="additional characteristic__measure"
-						 >Объем грузового пространства</div>
-				 </li>
-			 </ul>
-
-
-				<span class="find out more">
-				<img class="information_btn" src="img/information_btn.svg" alt="Иконка I">УЗНАТЬ БОЛЬШЕ
-				</span>
-			 <button class="button_order side__menu_button">ЗАКАЗАТЬ</button>
-
-
-
-				</aside>
-
-
-
-			</div>
-
-
-
-
-			</aside>
-
-
-		</main>
-
-		<footer class="footer">
-
-			<img class="footer__img" src="img/car_frame.png" alt="Схема машины">
-
-			<aside class="side__menu_left">
-					<article class="side__menu_article left_article">
-					<h3 class="side__menu_title left_title">Самый безопасный автомобиль в мире</h3>
-						Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.
-
-
-						<h2 class="left__menu_title">Оценка защиты</h2>
-					<ul class="side__menu_details">
-							<li class="lef__menu_item">СПЕРЕДИ</li>
-							<li class="lef__menu_item">СБОКУ</li>
-							<li class="lef__menu_item">СБОКУ <span class="subtitle">(стойка)</span></li>
-							<li class="lef__menu_item">ВОДИТЕЛЬ</li>
-							<li class="lef__menu_item">ПАССАЖИР</li>
-				 </ul>
-
-				 <div class="safe__rating">5 звезд <div class="safe__rating_text">безопасности</div></div>
-
-				 <span class="find out more">
- 				<img class="information_btn" src="img/information_btn.svg" alt="Иконка I">УЗНАТЬ БОЛЬШЕ
- 				</span>
- 			 <button class="button_order side__menu_button">ЗАКАЗАТЬ</button>
-
-		</footer>
-
+			<aside class="side-menu">
+					<article class="side-menu__article">
+							 <h3 class="side-menu__title">Будущее вождения</h3>
+							 Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
+							 </article>
+					<ul class="side-menu__characteristic-measure">
+							 <li class="characteristic-measure__details">
+									 <img class="display__icon" src="img/screen.svg" alt="Иконка дисплея">
+									 <span class="characteristic-measure__title">17</span>
+									 дюймов
+									 <div class="characteristic-measure__subtitle">Большой дисплей</div>
+							 </li>
+							 <li class="characteristic-measure__details">
+									 <img class="wifi__icon" src="img/wifi.svg" alt="Иконка wf">
+									 <li class="characteristic-measure__title">
+										 Беспроводное обновление ПО
+										 <div class="characteristic-measure__subtitle">Повышенная функциональность</div>
+							 		 </li>
+							 </li>
+							 <li class="characteristic-measure__details">
+									 <img class="bag__icon" src="img/bag.svg" alt="Иконка бака">
+									 <span class="characteristic-measure__title">894</span>
+									 литра
+									 <div class="characteristic-measure__subtitle"
+										 >Объем грузового пространства</div>
+							 </li>
+			 		</ul>
+					<div class="buttons">
+							 <button class="button-info">
+										<img class="information_btn" src="img/information_btn.svg" alt="Иконка I">УЗНАТЬ БОЛЬШЕ
+							 </button>
+							 <button class="button_order">ЗАКАЗАТЬ</button>
+					</div>
+	    </aside>
+	</main>
+	<footer class="footer">
+	    <img class="footer__img" src="img/car_frame.png" alt="Схема машины">
+			<aside class="side-menu side-menu_left">
+					<article class="side-menu__article side-menu__article_left">
+								<h3 class="side-menu__title side-menu__title_left">Самый безопасный автомобиль в мире</h3>
+									Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.
+					</article>
+					<h2 class="left-menu__title">Оценка защиты</h2>
+								<ul class="left-menu__details">
+										<li class="left-menu__item">СПЕРЕДИ</li>
+										<li class="left-menu__item">СБОКУ</li>
+										<li class="left-menu__item">СБОКУ <span class="subtitle">(стойка)</span></li>
+										<li class="left-menu__item">ВОДИТЕЛЬ</li>
+										<li class="left-menu__item">ПАССАЖИР</li>
+							  </ul>
+					<div class="left-menu__safe-rating">
+				 				<div class="safe-rating__title">5 звезд <div class="safe-rating__subtitle">безопасности</div></div>
+					</div>
+				 	<div class="buttons">
+							<button class="button-info">
+									 <img class="information_btn" src="img/information_btn.svg" alt="Иконка I">УЗНАТЬ БОЛЬШЕ
+							</button>
+							<button class="button_order">ЗАКАЗАТЬ</button>
+				 </div>
+   </footer>
 </body>
