--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<div class="characteristic-speed__description">0-100 км/час</div>
 					</div>
 					<div class="characteristic-range">
-						<img class="characteristic-range__img" alt="Range" src="img/road icon.svg"/>
+						<img class="characteristic-range__img" alt="Range" src="img/road.svg"/>
 						<div class="characteristic-range__caption">
 							<div class="characteristic-range__number">632<span class="characteristic-range__text">км</span></div>
 						</div>
@@ -75,7 +75,6 @@
 							<img class="wifi__icon" src="img/wifi.svg" alt="WF">
 							<span class="characteristic-measure__title">Беспроводное обновление ПО</span>
 							<div class="characteristic-measure__subtitle">Повышенная функциональность</div>
-						</li>
 						</li>
 						<li class="characteristic-measure__details">
 							<img class="bag__icon" src="img/bag.svg" alt="Бак">
