--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
 				<div class="section-1__characteristics">
 					<div class="characteristic-speed">
 						<img class="characteristic-speed__img" alt="Speed" src="img/speed.svg"/>
-						<div class="characteristic-speed__caption">
-							<div class="characteristic-speed__number">2,7<span class="characteristic-speed__text">сек</span></div>
-						</div>
+						<div class="characteristic-speed__number">2,7</div>
+						<span class="characteristic-speed__text">сек</span>
 						<div class="characteristic-speed__description">0-100 км/час</div>
 					</div>
 					<div class="characteristic-range">
 						<img class="characteristic-range__img" alt="Range" src="img/road.svg"/>
-						<div class="characteristic-range__caption">
-							<div class="characteristic-range__number">632<span class="characteristic-range__text">км</span></div>
-						</div>
+						<div class="characteristic-range__number">632</div>
+						<span class="characteristic-range__text">км</span>
 						<div class="characteristic-range__description">запас хода</div>
 					</div>
 					<div class="section-1__buttons">
